# pleasecompilerineedthis

./: .gitignore  cli.py  example.pls  output.py  pyproject.toml  quicktests.py  readme.md  requirements.txt
components/: __init__.py  compiler.py  evaluator.py  repl.py  secretapikeys.py
components/topsecret/: __init__.py
pleasecompilerineedthis/: __init__.py  __main__.py
